--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Flow Calculator</title>
     <link rel="stylesheet" href="./CSS/style.css">
 
+    <script src="./Scripts/script.js" defer></script>
+    
 </head>
 <body>
     <h1>Welcome to the compressible flow calculator</h1>
