--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Welcome to the compressible flow calculator</h1>
     <p>Created by William Martin</p>
 
-    <form id="cacl_selection">
+    <form id="calc_selection">
         <label for="name">Selections: </label>
         <input type="submit" value="Isentropic Flow">
         <input type="submit" value="Normal and Oblique Shocks">
