--- a/Pages/Rayleigh.html
+++ b/Pages/Rayleigh.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Rayleigh Flow Calculator</h1>
-  <a href = "index.html">Return</a>
+  <a href = "../index.html">Return</a>
   
 </body>
