--- a/Pages/NandO_Shocks.html
+++ b/Pages/NandO_Shocks.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Normal and Oblique Shock Calculator</h1>
-  <a href = "index.html">Return</a>
+  <a href = "../index.html">Return</a>
   
 </body>
