--- a/Pages/isentropic.html
+++ b/Pages/isentropic.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
-  <a href = "index.html">Return</a>
+    <h1>Isentropic Flow Calculator</h1>
+  <a href = "../index.html">Return</a>
   
 </body>
