--- a/Pages/expansionResult.html
+++ b/Pages/expansionResult.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Shock Expansion Calculator</h1>
+    <p>Numbers</p>
   <a href = "./expansion.html">Return</a>
   
 </body>
