--- a/Pages/isentropic.html
+++ b/Pages/isentropic.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isentropic Calculator</title>
     <link rel="stylesheet" href="../CSS/style.css">
-
+    
+    <script src="../Scripts/IsentropicScript.js" defer></script>
 </head>
 <body>
     <h1>Isentropic Flow Calculator</h1>
+    <form id="form">
+        <input type="submit" value="Submit Results">
   <a href = "../index.html">Return</a>
   
 </body>
