--- a/Pages/NandO_Shocks.html
+++ b/Pages/NandO_Shocks.html
@@ -6,9 +6,12 @@
     <title>Shocks Calculator</title>
     <link rel="stylesheet" href="../CSS/style.css">
 
+    <script src="../Scripts/NandO_ShocksScript.js" defer></script>
 </head>
 <body>
     <h1>Normal and Oblique Shock Calculator</h1>
+    <form id="form">
+        <input type="submit" value="Submit Results">
   <a href = "../index.html">Return</a>
   
 </body>
