--- a/Pages/expansion.html
+++ b/Pages/expansion.html
@@ -6,9 +6,12 @@
     <title>Expansion Shock</title>
     <link rel="stylesheet" href="../CSS/style.css">
 
+     <script src="../Scripts/expansionScript.js" defer></script>
 </head>
 <body>
     <h1>Shock Expansion Calculator</h1>
+    <form id="form">
+        <input type="submit" value="Submit Results">
   <a href = "../index.html">Return</a>
   
 </body>
