--- a/Pages/critmach.html
+++ b/Pages/critmach.html
@@ -6,9 +6,12 @@
     <title>Critical Mach</title>
     <link rel="stylesheet" href="../CSS/style.css">
 
+    <script src="../Scripts/critmachScript.js" defer></script>
 </head>
 <body>
-    <h1>Isentropic Flow Calculator</h1>
+    <h1>Critical Mach Calculator</h1>
+    <form id="form">
+        <input type="submit" value="Submit Results">
   <a href = "../index.html">Return</a>
   
 </body>
