--- a/Pages/nozzles.html
+++ b/Pages/nozzles.html
@@ -6,9 +6,12 @@
     <title>Nozzle Regimes</title>
     <link rel="stylesheet" href="../CSS/style.css">
 
+    <script src="../Scripts/nozzlesScript.js" defer></script>
 </head>
 <body>
     <h1>Nozzle Regimes</h1>
+    <form id="form">
+        <input type="submit" value="Submit Results">
   <a href = "../index.html">Return</a>
   
 </body>
