--- a/Pages/Rayleigh.html
+++ b/Pages/Rayleigh.html
@@ -6,9 +6,12 @@
     <title>Rayleigh Flow</title>
     <link rel="stylesheet" href="../CSS/style.css">
 
+    <script src="../Scripts/RayleighScript.js" defer></script>
 </head>
 <body>
     <h1>Rayleigh Flow Calculator</h1>
+    <form id="form">
+        <input type="submit" value="Submit Results">
   <a href = "../index.html">Return</a>
   
 </body>
