--- a/Pages/nozzlesResult.html
+++ b/Pages/nozzlesResult.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Nozzle Regimes</h1>
   <p>Numbers</p>
-  <a href = "./nozzle.html">Return</a>
+  <a href = "./nozzles.html">Return</a>
   
 </body>
