--- a/Pages/isentropic.html
+++ b/Pages/isentropic.html
@@ -13,7 +13,7 @@
     <form id="form">
         <p>Select the known ratio:</p>
         <div>
-            <input type="radio" id="mach" name="ratio" value="mach" checked>
+            <input type="radio" id="mach" name="ratio" value="mach">
             <label for="mach">Mach Number (M)</label><br>
             <input type="radio" id="pressure" name="ratio" value="pressure">
             <label for="pressure">Pressure Ratio (P/Po)</label><br>
