--- a/Pages/isentropicResult.html
+++ b/Pages/isentropicResult.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     <h1>Isentropic Flow Calculator</h1>
-  <p>Numbers</p>
+    <p>Numbers</p>
+    <p>Mach : <span id="mach"></p>
+    <p>T0/T : <span id="t0_t"></p>
+    <p>P0/P : <span id="p0_p"></p>
+    <p>Rho0/Rho : <span id="rho0_rho"></p>
+    <p>A/As : <span id="a_as"></p>
   <a href = "./isentropic.html">Return</a>
-  
+
+    <script src="../Scripts/IsentropicResults.js"></script>
 </body>
+
+</html>
