--- a/Pages/isentropic.html
+++ b/Pages/isentropic.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../CSS/style.css">
     
     <script src="../Scripts/IsentropicScript.js" defer></script>
+    <script src"https://cdn.jsdelivr.net/npm/mathjs@11.11.0/lib/browser/math.js" defer></script>
+    
 </head>
 <body>
     <h1>Isentropic Flow Calculator</h1>
