--- a/Pages/isentropic.html
+++ b/Pages/isentropic.html
@@ -6,7 +6,7 @@
     <title>Isentropic Calculator</title>
     <link rel="stylesheet" href="../CSS/style.css">
 
-    <script src"https://cdn.jsdelivr.net/npm/mathjs@11.11.0/lib/browser/math.js" defer></script>
+    <script src"https://cdn.jsdelivr.net/npm/mathjs@14.6.0/lib/browser/math.min.jss" defer></script>
     <script src="../Scripts/IsentropicScript.js" defer></script>
     
 </head>
