added results and testing non linear solver

--- a/Pages/isentropicResult.html
+++ b/Pages/isentropicResult.html
@@ -9,12 +9,27 @@
 </head>
 <body>
     <h1>Isentropic Flow Calculator</h1>
-    <p>Numbers</p>
-    <p>Mach : <span id="mach"></p>
-    <p>T0/T : <span id="t0_t"></p>
-    <p>P0/P : <span id="p0_p"></p>
-    <p>Rho0/Rho : <span id="rho0_rho"></p>
-    <p>A/As : <span id="a_as"></p>
+    <div>
+      <p>Numbers</p>  
+    </div>
+    <div>
+      <form id="Results">
+        <p>Mach : <span id="mach"></span></p>
+        <p>T0/T : <span id="t0_t"></span></p>
+        <p>P0/P : <span id="p0_p"></span></p>
+        <p>Rho0/Rho : <span id="rho0_rho"></span></p>
+        <p>A/As : <span id="a_as"></span></p>
+        <p>Mach subsonic : <span id="mach_sub"></span></p>
+        <p>T0/T subsonic : <span id="t0t_sub"></span></p>
+        <p>P0/P subsonic : <span id="p0p_sub"></span></p>
+        <p>Rho0/Rho subsonic : <span id="rho0rho_sub"></span></p>
+        <p>Mach supersonic : <span id="mach_sup"></span></p>
+        <p>T0/T supersonic : <span id="t0t_sup"></span></p>
+        <p>P0/P supersonic : <span id="p0p_sup"></span></p>
+        <p>Rho0/Rho supersonic : <span id="rho0rho_sup"></span></p>
+      </form>
+    </div>
+    
   <a href = "./isentropic.html">Return</a>
 
     <script src="../Scripts/IsentropicResults.js"></script>
