--- a/Pages/isentropic.html
+++ b/Pages/isentropic.html
@@ -6,7 +6,7 @@
     <title>Isentropic Calculator</title>
     <link rel="stylesheet" href="../CSS/style.css">
 
-    <script src="math.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.min.js"></script>
     <script src="../Scripts/IsentropicScript.js" defer></script>
     
 </head>
