mach solver testing

--- a/Pages/isentropicResult.html
+++ b/Pages/isentropicResult.html
@@ -23,7 +23,7 @@
         <p>T0/T subsonic : <span id="t0t_sub"></span></p>
         <p>P0/P subsonic : <span id="p0p_sub"></span></p>
         <p>Rho0/Rho subsonic : <span id="rho0rho_sub"></span></p>
-        <p>Mach supersonic : <span id="mach_sup"></span></p>
+        <p>Mach supersonic : <span id="mach_super"></span></p>
         <p>T0/T supersonic : <span id="t0t_sup"></span></p>
         <p>P0/P supersonic : <span id="p0p_sup"></span></p>
         <p>Rho0/Rho supersonic : <span id="rho0rho_sup"></span></p>
