mach solver testing

--- a/Pages/isentropicResult.html
+++ b/Pages/isentropicResult.html
@@ -24,9 +24,9 @@
         <p>P0/P subsonic : <span id="p0p_sub"></span></p>
         <p>Rho0/Rho subsonic : <span id="rho0rho_sub"></span></p>
         <p>Mach supersonic : <span id="mach_super"></span></p>
-        <p>T0/T supersonic : <span id="t0t_sup"></span></p>
-        <p>P0/P supersonic : <span id="p0p_sup"></span></p>
-        <p>Rho0/Rho supersonic : <span id="rho0rho_sup"></span></p>
+        <p>T0/T supersonic : <span id="t0t_super"></span></p>
+        <p>P0/P supersonic : <span id="p0p_super"></span></p>
+        <p>Rho0/Rho supersonic : <span id="rho0rho_super"></span></p>
       </form>
     </div>
     
