--- a/Pages/isentropicResult.html
+++ b/Pages/isentropicResult.html
@@ -14,19 +14,19 @@
     </div>
     <div>
       <form id="Results">
-        <p>Mach : <span id="mach"></span></p>
-        <p>T0/T : <span id="t0_t"></span></p>
-        <p>P0/P : <span id="p0_p"></span></p>
-        <p>Rho0/Rho : <span id="rho0_rho"></span></p>
-        <p>A/As : <span id="a_as"></span></p>
-        <p>Mach subsonic : <span id="mach_sub"></span></p>
-        <p>T0/T subsonic : <span id="t0t_sub"></span></p>
-        <p>P0/P subsonic : <span id="p0p_sub"></span></p>
-        <p>Rho0/Rho subsonic : <span id="rho0rho_sub"></span></p>
-        <p>Mach supersonic : <span id="mach_super"></span></p>
-        <p>T0/T supersonic : <span id="t0t_super"></span></p>
-        <p>P0/P supersonic : <span id="p0p_super"></span></p>
-        <p>Rho0/Rho supersonic : <span id="rho0rho_super"></span></p>
+        <p>Mach : <span id="Mach"></span></p>
+        <p>T0/T : <span id="T0_T"></span></p>
+        <p>P0/P : <span id="P0_P"></span></p>
+        <p>Rho0/Rho : <span id="Rho0_Rho"></span></p>
+        <p>A/As : <span id="A_As"></span></p>
+        <p>Mach subsonic : <span id="Mach_sub"></span></p>
+        <p>T0/T subsonic : <span id="T0T_sub"></span></p>
+        <p>P0/P subsonic : <span id="P0P_sub"></span></p>
+        <p>Rho0/Rho subsonic : <span id="Rho0Rho_sub"></span></p>
+        <p>Mach supersonic : <span id="Mach_super"></span></p>
+        <p>T0/T supersonic : <span id="T0T_super"></span></p>
+        <p>P0/P supersonic : <span id="P0P_super"></span></p>
+        <p>Rho0/Rho supersonic : <span id="Rho0Rho_super"></span></p>
       </form>
     </div>
     
