--- a/Pages/isentropicResult.html
+++ b/Pages/isentropicResult.html
@@ -13,21 +13,29 @@
       <p>Numbers</p>  
     </div>
     <div>
-      <form id="Results">
+      <form id="MachResults">
         <p>Mach : <span id="Mach"></span></p>
-        <p>T0/T : <span id="T0_T"></span></p>
-        <p>P0/P : <span id="P0_P"></span></p>
-        <p>Rho0/Rho : <span id="Rho0_Rho"></span></p>
-        <p>A/As : <span id="A_As"></span></p>
         <p>Mach subsonic : <span id="Mach_sub"></span></p>
-        <p>T0/T subsonic : <span id="T0T_sub"></span></p>
-        <p>P0/P subsonic : <span id="P0P_sub"></span></p>
-        <p>Rho0/Rho subsonic : <span id="Rho0Rho_sub"></span></p>
         <p>Mach supersonic : <span id="Mach_super"></span></p>
-        <p>T0/T supersonic : <span id="T0T_super"></span></p>
-        <p>P0/P supersonic : <span id="P0P_super"></span></p>
-        <p>Rho0/Rho supersonic : <span id="Rho0Rho_super"></span></p>
       </form>
+      <form id="TempResults">
+        <p>To/T : <span id="T0_T"></span></p>
+        <p>To/T subsonic : <span id="T0T_sub"></span></p>
+        <p>To/T supersonic : <span id="T0T_super"></span></p>
+      </form>
+      <form id="PressResults">
+        <p>Po/P : <span id="P0_P"></span></p>
+        <p>Po/P subsonic : <span id="P0P_sub"></span></p>
+        <p>Po/P supersonic : <span id="P0P_super"></span></p>
+      </form>
+      <form id="DensityResults">
+        <p>&#120588 o/&#120588 : <span id="Rho0_Rho"></span></p>
+        <p>&#120588 o/&#120588 subsonic : <span id="Rho0Rho_sub"></span></p>
+        <p>&#120588 o/&#120588 supersonic : <span id="Rho0Rho_super"></span></p>
+      </form>
+      <form id="AreaResults">
+        <p>A/As : <span id="A_As"></span></p>
+      </form>  
     </div>
     
   <a href = "./isentropic.html">Return</a>
