--- a/Pages/isentropicResult.html
+++ b/Pages/isentropicResult.html
@@ -12,7 +12,7 @@
     <div>
       <p>Numbers</p>  
     </div>
-    <div>
+    <div classs = "form-container">
       <form id="MachResults">
         <p>Mach : <span id="Mach"></span></p>
         <p>Mach subsonic : <span id="Mach_sub"></span></p>
