formatting shock page

--- a/Pages/NandO_Shocks.html
+++ b/Pages/NandO_Shocks.html
@@ -17,7 +17,7 @@
         <label for= "oblique">Oblique Shock</label><br>
         <p>Enter upstream conditions: </p>
         <input type="number" id = "mach" step="any" placeholder="(M1)" required>
-        <input type="number" id = "angle" step="any" placeholder="(θ)" required>
+        <input type="number" id = "angle" step="any" placeholder="(θ)">
         <input type="number" id="temp" step="any" placeholder="(T1)" required>
         <input type="number" id="press" step="any" placeholder="(P1)" required>
         <input type="submit" value="Submit Results">
