--- a/Pages/O_ShocksResult.html
+++ b/Pages/O_ShocksResult.html
@@ -12,8 +12,8 @@
   <div>
     <p>Solution : </p>
   </div>
-  <div class="form-container-isentropic">
-    <form id="Upstream" class="result-box-isentropic">
+  <div class="form-container">
+    <form id="Upstream" class="result-box">
       <h1>Upstream</h1>
       <p> Mach : <span id="Mach1"></span></p>
       <p> Temprature : <span id="Temp1"></span></p>
@@ -22,7 +22,7 @@
       <p> Total Pressure : <span id="P01"></span></p>
       <p> &#120588 : <span id="Rho1"></span></p>
     </form>
-    <form id="Downstream" class="result-box-isentropic">
+    <form id="Downstream" class="result-box">
       <h1>Downstream</h1>
       <p> Mach : <span id="Mach2"></span></p>
       <p> Temprature : <span id="Temp2"></span></p>
@@ -31,7 +31,7 @@
       <p> Total Pressure : <span id="P02"></span></p>
       <p> &#120588 : <span id="Rho2"></span></p>
     </form>
-    <form id="Shared" class="result-box-container">
+    <form id="Shared" class="result-box">
       <h1>Shared</h1>
       <p> Theta : <span id="Theta"></span></p>
       <p> Beta : <span id="Beta"></span></p>
