--- a/Pages/isentropicResult.html
+++ b/Pages/isentropicResult.html
@@ -12,28 +12,28 @@
     <div>
       <p>Solutions : </p>  
     </div>
-    <div class="form-container-isentropic">
-      <form id="MachResults" class="result-box-isentropic">
+    <div class="form-container">
+      <form id="MachResults" class="result-box">
         <p>Mach : <span id="Mach"></span></p>
         <p>Mach subsonic : <span id="Mach_sub"></span></p>
         <p>Mach supersonic : <span id="Mach_super"></span></p>
       </form>
-      <form id="TempResults" class="result-box-isentropic">
+      <form id="TempResults" class="result-box">
         <p>To/T : <span id="T0_T"></span></p>
         <p>To/T subsonic : <span id="T0T_sub"></span></p>
         <p>To/T supersonic : <span id="T0T_super"></span></p>
       </form>
-      <form id="PressResults" class="result-box-isentropic">
+      <form id="PressResults" class="result-box">
         <p>Po/P : <span id="P0_P"></span></p>
         <p>Po/P subsonic : <span id="P0P_sub"></span></p>
         <p>Po/P supersonic : <span id="P0P_super"></span></p>
       </form>
-      <form id="DensityResults" class="result-box-isentropic">
+      <form id="DensityResults" class="result-box">
         <p>&#120588o/&#120588 : <span id="Rho0_Rho"></span></p>
         <p>&#120588o/&#120588 subsonic : <span id="Rho0Rho_sub"></span></p>
         <p>&#120588o/&#120588 supersonic : <span id="Rho0Rho_super"></span></p>
       </form>
-      <form id="AreaResults" class="result-box-isentropic">
+      <form id="AreaResults" class="result-box">
         <p>A/A* : <span id="A_As"></span></p>
       </form>  
     </div>
