--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <input type="submit" value="Critical Mach">
         <input type="submit" value="Nozzle Regimes">
         <input type="submit" value="Rayleigh Flow">
+        <input type="submit" value="test">
     </form>
 </body>
 </html>
