--- a/Pages/O_ShocksResult.html
+++ b/Pages/O_ShocksResult.html
@@ -35,13 +35,14 @@
         <div><span class="sw flow"></span> <span class="muted">Streamlines</span></div>
         <div><span class="sw shock"></span> <span class="muted">Shock line</span></div>
     </div>
-    <div style="display:flex;gap:8px;align-items:center">
+    <div class="legend" style="display:flex;gap:8px;align-items:center">
         <label style="display:flex;align-items:center;gap:6px"><input id="branchWeak" type="radio" name="branch" value="weak" checked> <span class="muted">Weak</span></label>
         <label style="display:flex;align-items:center;gap:6px"><input id="branchStrong" type="radio" name="branch" value="strong"> <span class="muted">Strong</span></label>
     </div>
     <button id="drawBtn">Draw</button>
     <input id="showControl" type="checkbox" /> <span class="muted">Show control points</span>
-    <input id="streamCount" type="number" min="3" max="21" value="9" step="2">
+    <input id="streamSlide" type="range" min="0" max="10" value="8" step="1">
+    <input id="streamCount" type="number" min="3" max="10" value="8" step="1">
   </div>
   <div>
     <p>Solution : </p>
