shock curve intit

--- a/Pages/O_ShocksResult.html
+++ b/Pages/O_ShocksResult.html
@@ -11,20 +11,20 @@
 </head>
 <body>
   <h1>Oblique Shock Results</h1>
-  <div class="panel" role="region" arie-label="Shock Panel">
+  <div class="panel" role="region" aria-label="Shock Panel">
     <header>
       <h1>Shock Graph</h1>
     </header>
     <div class="svg-wrap" style="margin-top:12px">
-      <svg id="svg" veiwBox="0 0 1100 560" preserveAspectRatio="xMidYMid meet" role="img" aria-label="Shock Graph">
+      <svg id="svg" preserveAspectRatio="xMidYMid meet" role="img" aria-label="Shock Graph">
         <defs>
           <marker id="arrow" viewBox="0 0 10 10" refX="8" refY="5" markerWidth="6" markerHeight="6" orient="auto">
             <path d="M 0 0 L 10 5 L 0 10 z" fill="#1f6fb2"></path>
           </marker>
         </defs>
 
-        <g id="grid" opacity="0.08" stroke="#9fb3c6" stroke-width="0.5"></g>
-        <g id="grid" opacity="0.08" stroke="#9fb3c6" stroke-width="0.5"></g>
+        <g id="grid" opacity="0.25" stroke="#9fb3c6" stroke-width="0.5"></g>
+        
         <g id="streamlines" transform="translate(40,280)"></g>
         <g id="shock" transform="translate(40,280)"></g>
         <g id="labels" transform="translate(40,280)"></g>
