--- a/Pages/expansion.html
+++ b/Pages/expansion.html
@@ -11,6 +11,9 @@
 <body>
     <h1>Shock Expansion Calculator</h1>
     <form id="form">
+        <p>Upstream Mach and shock angle</p>
+        <input type="number" id="mach" step="any" placeholder="(M1)" required>
+        <input type="number" id="theta" step="any" placeholder="(&#952)" required>
         <input type="submit" value="Submit Results">
   <a href = "../index.html">Return</a>
   
